--- a/post/2025-03-25-unit00/hands-on-introduction_to_deep_learning.ipynb
+++ b/post/2025-03-25-unit00/hands-on-introduction_to_deep_learning.ipynb
@@ -824,7 +824,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is screenshot from the [tensorflow playground](https://playground.hakyimlab.org). It's a great website to develop some intuition on how models learn with easily modifiable hyper parameters, data types, loss, activation, etc. We modified it a bit for the course. Tensorflow is another deep learning framework developed by Google. In contrast, Pytorch was developed by Meta and is more commonly used in academic research."
+    "This is a screenshot from the tensorflow playground. Here is our own version of the [playground](https://playground.hakyimlab.org) with minor modifications. It's a great website to develop some intuition on how models learn with easily modifiable hyper parameters, data types, loss, activation, etc. We modified it a bit for the course. Tensorflow is another deep learning framework developed by Google. In contrast, Pytorch was developed by Meta and is more commonly used in academic research."
    ]
   },
   {
@@ -1174,7 +1174,7 @@
    "source": [
     "# Exercise: \n",
     "Create a more performant model to predict y = x^3\n",
-    "You can use the [playground]() webpage to try out different hyperparameters."
+    "You can use the [playground](https://playground.hakyimlab.org) webpage to try out different hyperparameters."
    ]
   },
   {
