--- a/post/2025-02-20-testing/testing-dna-tutorial.ipynb
+++ b/post/2025-02-20-testing/testing-dna-tutorial.ipynb
@@ -21,6 +21,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# TESTING HKI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Pytorch tutorial using DNA \n",
     "created by Erin Wilson. Downloaded from [here](https://github.com/erinhwilson/dna-pytorch-tutorial). Minor edits by Haky Im for compatibility with Apple Silicon (M1/M2/M3) MacBooks using MPS\n",
     "\n",
