--- a/post/2025-02-20-testing/testing-dna-tutorial.ipynb
+++ b/post/2025-02-20-testing/testing-dna-tutorial.ipynb
@@ -29,7 +29,9 @@
    "metadata": {},
    "source": [
     "# Pytorch tutorial using DNA \n",
-    "created by Erin Wilson. Downloaded from [here](https://github.com/erinhwilson/dna-pytorch-tutorial). Minor edits by Haky Im for compatibility with Apple Silicon (M1/M2/M3) MacBooks using MPS\n",
+    "created by Erin Wilson. Downloaded from [here](https://github.com/erinhwilson/dna-pytorch-tutorial). \n",
+    "\n",
+    "Minor edits by Haky Im for compatibility with Apple Silicon (M1/M2/M3) MacBooks using MPS\n",
     "\n",
     "Key changes:\n",
     "1. Using float32 instead of float64 (MPS doesn't support double precision)\n",
@@ -72,6 +74,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -104,8 +113,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## import necessary modules"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -133,8 +149,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## set seeds for reproduciblity across runs"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,12 +192,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## define GPU device"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Are you working on a GPU? If so, you can put your data/models on `DEVICE` (and have to do so explicity)! If not, you can probably remove all instances of `foo.to(DEVICE)` and it should still work fine on a CPU.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +213,7 @@
        "device(type='mps')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,8 +290,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### explanation "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('A', 'A')\n",
+      "('A', 'C')\n",
+      "('A', 'G')\n",
+      "('C', 'A')\n",
+      "('C', 'C')\n",
+      "('C', 'G')\n",
+      "('G', 'A')\n",
+      "('G', 'C')\n",
+      "('G', 'G')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# product(['A','C','G'], repeat=k)\n",
+    "# generates all possible tuples of length k containing 'A', 'C', or 'G' \n",
+    "for x in product(['A','C','G'], repeat=2): # for k = 2\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'AG'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## ''.join joins the tuple into a string\n",
+    "''.join(('A', 'G')) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### generate all 8-mers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -279,8 +372,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### define scoring function for the DNA sequences"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +482,7 @@
        "4  AAAAAACA  19.625"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +550,7 @@
        "59135  TGCGTTTT   2.500"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,10 +563,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As expected, the distribution of scores across all 8-mers has 3 groups:\n",
-    "* No motif (centered around ~15)\n",
-    "* contains `TAT` (~25)\n",
-    "* contains `GCG` (~5)"
+    "## plot distribution of motif scores"
    ]
   },
   {
@@ -497,7 +594,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our goal is now to train a model to predict this score by looking at the DNA sequence."
+    "As expected, the distribution of scores across all 8-mers has 3 groups:\n",
+    "* No motif (centered around ~15)\n",
+    "* contains `TAT` (~25)\n",
+    "* contains `GCG` (~5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next, we want to train a model to predict this score by from the DNA sequence"
    ]
   },
   {
@@ -523,14 +630,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/cat.png)"
+    "### turn DNA sequences into numbers with one hot encoding"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### one hot encode DNA sequences"
+    "![](images/cat.png)"
    ]
   },
   {
@@ -542,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +693,26 @@
       " [1. 0. 0. 0.]\n",
       " [1. 0. 0. 0.]\n",
       " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]]\n",
+      " [1. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# one hot encoding of 8 As\n",
+    "a8 = one_hot_encode(\"AAAAAAAA\")\n",
+    "print(\"AAAAAA:\\n\",a8)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "AGGTACC:\n",
       " [[1. 0. 0. 0.]\n",
       " [0. 0. 1. 0.]\n",
@@ -601,10 +727,6 @@
     }
    ],
    "source": [
-    "# one hot encoding of 8 As\n",
-    "a8 = one_hot_encode(\"AAAAAAAA\")\n",
-    "print(\"AAAAAA:\\n\",a8)\n",
-    "\n",
     "# one hot encoding of another DNA\n",
     "s = one_hot_encode(\"AGGTACCT\")\n",
     "print(\"AGGTACC:\\n\",s)\n",
@@ -622,14 +744,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With this one-hot encoding scheme, we can prepare our train, val, and test sets. This `quick_split` just randomly picks some indices in the pandas dataframe to split (sklearn has a function to do this too). \n",
+    "Data are typically split into training, validation, and test sets. This helps avoid overfitting and achieve better generalization to new data.\n",
     "\n",
-    "_Note: In real/non-synthetic tasks, you might need to be more clever about your splitting strategy depending on your prediction task: often papers will create train/test splits by chromosome or other genome location features_"
+    "1. Training set (e.g. 70% of the data)\n",
+    "    - used to train the model\n",
+    "    - model learns patterns from this data\n",
+    "    - like studying for an exam\n",
+    "2. Validation or tuning set (e.g. 15% of the data)\n",
+    "    - used to tune hypterparameters\n",
+    "    - helps prevent overfitting\n",
+    "    - like pratice problems while studying\n",
+    "3. Test set or held out set (e.g. 15% of the data)\n",
+    "    - used only to evaluate final model performance\n",
+    "    - never used during training or tuning\n",
+    "    - like actual exam"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we define a `quick_split` function just randomly picks some indices in the pandas dataframe to split (sklearn has a function to do this too). \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +876,7 @@
        "4  AAAAAACC  19.250"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,12 +897,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### plot distribution of train, validation, and test data"
+    "### plot distribution of train, validation, and test data and check that they are similarly distributed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -815,12 +955,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can read about [DataLoader and Dataset](https://pytorch.org/tutorials/beginner/basics/data_tutorial.html) objects."
+    "Dataset and DataLoader classes allow efficient data handling in deep learning.\n",
+    "\n",
+    "Dataset class allows standardized way to access and preprocess data.\n",
+    "\n",
+    "Dataloader handles batching, shuffling, parallel data loading to make it easier to feed the data for training.\n",
+    "\n",
+    "You can read more about [DataLoader and Dataset](https://pytorch.org/tutorials/beginner/basics/data_tutorial.html) objects."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,13 +977,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Define one hot encoded dataset class\n",
-    "This class is essential for preparing DNA sequence data for deep learning models, converting the biological sequences into a numerical format that neural networks can process.\n"
+    "#### define one hot encoded dataset class\n",
+    "This class is essential for preparing DNA sequence data for deep learning models, converting the DNA sequences into a numerical format that neural networks can process.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,27 +1002,6 @@
     "        # Get target scores\n",
     "        self.labels = torch.tensor(list(df[target_col].values)).unsqueeze(1)\n",
     "        \n",
-    "    \n",
-    "    # def __init__(self,\n",
-    "    #              df,\n",
-    "    #              seq_col='seq',\n",
-    "    #              target_col='score'\n",
-    "    #             ):\n",
-    "    #     # +--------------------+\n",
-    "    #     # | Get the X examples |\n",
-    "    #     # +--------------------+\n",
-    "    #     # extract the DNA from the appropriate column in the df\n",
-    "    #     self.seqs = list(df[seq_col].values)\n",
-    "    #     self.seq_len = len(self.seqs[0])\n",
-    "        \n",
-    "    #     # one-hot encode sequences, then stack in a torch tensor\n",
-    "    #     self.ohe_seqs = torch.stack([torch.tensor(one_hot_encode(x)) for x in self.seqs])\n",
-    "    \n",
-    "    #     # +------------------+\n",
-    "    #     # | Get the Y labels |\n",
-    "    #     # +------------------+\n",
-    "    #     self.labels = torch.tensor(list(df[target_col].values)).unsqueeze(1)\n",
-    "        \n",
     "    def __len__(self): return len(self.seqs)\n",
     "    \n",
     "    def __getitem__(self,idx):\n",
@@ -892,12 +1017,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Here is how I constructed DataLoaders from Datasets. "
+    "#### construct DataLoaders from Datasets. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +1126,7 @@
     "    \n",
     "    # __FOOTNOTE 1__\n",
     "\n",
-    "\n",
+    "## TODO: use this model instead of the DNA_CNN later\n",
     "class DNA_CNN2(nn.Module):\n",
     "    def __init__(self, seq_len, num_filters=32, kernel_size=3):\n",
     "        super().__init__()\n",
@@ -1059,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,10 +1219,9 @@
     "    # __FOOTNOTE 2__\n",
     "    \n",
     "    if opt is not None: # if opt\n",
+    "        opt.zero_grad() ## moved zero grad up to make sure it's not accumulating grads from previous batches\n",
     "        loss.backward()\n",
     "        opt.step()\n",
-    "        opt.zero_grad()\n",
-    "\n",
     "    return loss.item(), len(xb)\n",
     "\n",
     "\n",
