--- a/index.qmd
+++ b/index.qmd
@@ -11,10 +11,12 @@ page-layout: full
 title-block-banner: false
 ---
 
-Edit source [here](https://github.com/hakyimlab/web-GENE-46100)
 
+This page contains material for the GENE46100 Deep learning in genomics course. 
 
+Find the 2025 syllabus [here](https://docs.google.com/document/d/17X3LEh_C-34JfXJcKJfFY8ew8MHBsxc_z0DPEuIlzwE/edit?usp=sharing).
 
-This page contains material for the GENE46100 Deep learning in genomics course. Find this year's syllabus [here](https://docs.google.com/document/d/17X3LEh_C-34JfXJcKJfFY8ew8MHBsxc_z0DPEuIlzwE/edit?usp=sharing).
+Edit github source [here](https://github.com/hakyimlab/web-GENE-46100)
+
 
 
