--- a/post/2020-01-01-TODO/fit-linear-model-to-linear.ipynb
+++ b/post/2020-01-01-TODO/fit-linear-model-to-linear.ipynb
@@ -64,7 +64,6 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.linear = nn.Linear(1, 1)  # 1 input feature, 1 output\n",
-    "\n",
     "    def forward(self, x):\n",
     "        return self.linear(x)\n",
     "\n",
@@ -77,17 +76,17 @@
     "# define an optimizer\n",
     "optimizer = optim.SGD(model.parameters(), lr=0.01)\n",
     "\n",
-    "# train: iterate over the data and update the model\n",
+    "# Train: iterate over the data and update the model\n",
     "num_epochs = 100\n",
     "for epoch in range(num_epochs):\n",
-    "    # Forward pass\n",
+    "    # Forward pass: compute model predictions and loss\n",
     "    y_pred = model(X_tensor)\n",
     "    loss = loss_fn(y_pred, y_tensor)\n",
     "    \n",
-    "    # Backward pass and optimize\n",
-    "    optimizer.zero_grad()  # Clear gradients\n",
-    "    loss.backward()       # Compute gradients\n",
-    "    optimizer.step()      # Update weights\n",
+    "    # Backward pass and parameter update\n",
+    "    optimizer.zero_grad()  # Clear previous gradients\n",
+    "    loss.backward()        # Compute gradients via backpropagation\n",
+    "    optimizer.step()       # Update model parameters\n",
     "    \n",
     "    if (epoch + 1) % 10 == 0:\n",
     "        print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {loss.item():.4f}')\n",
