changed name of dna tutorial file

--- a/post/2025-03-25-unit00/updated-dna-cnn-tutorial.ipynb
+++ b/post/2025-03-25-unit00/updated-dna-cnn-tutorial.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: DNA score prediction with Pytorch \n",
+    "title: Updated - DNA score prediction with Pytorch \n",
     "author: Erin Wilson\n",
-    "date: 2023-04-03\n",
+    "date: 2025-04-04\n",
     "date-modified: last-modified\n",
     "categories:\n",
     "  - gene46100\n",
