--- a/post/2025-03-25-unit00/basic_DNA_tutorial.ipynb
+++ b/post/2025-03-25-unit00/basic_DNA_tutorial.ipynb
@@ -13,7 +13,8 @@
     "  - gene46100\n",
     "  - notebook\n",
     "execute:\n",
-    "  eval: false \n",
+    "  eval: false\n",
+    "draft: true \n",
     "---"
    ]
   },
