--- a/DRAFTS/measuring-info-in-DNA-seq.ipynb
+++ b/DRAFTS/measuring-info-in-DNA-seq.ipynb
@@ -160,37 +160,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Logic:\n",
+    "This Python code defines functions to visualize the patterns learned by the filters in the first convolutional layer of a neural network designed for DNA sequence analysis. Instead of relying on sequences that maximally activate the filters, this code directly uses the filter weights to create Position Weight Matrices (PWMs) and then visualizes them as sequence logos.\n",
     "\n",
-    "calculate_pwm_from_filter_weights(conv_layer):\n",
+    "Here's a breakdown of what each part of the code does:\n",
     "\n",
-    "Takes a PyTorch nn.Conv1d layer as input.\n",
-    "Extracts the weight data from the convolutional layer using conv_layer.weight.data.cpu().numpy(). The shape of these weights is typically (out_channels, in_channels, kernel_size).\n",
-    "Checks if the in_channels is 4, as expected for one-hot encoded DNA.\n",
-    "Iterates through each filter (out_channels).\n",
-    "For each filter, it extracts the corresponding weight matrix, which will have a shape of (4, kernel_size).\n",
-    "The raw weights themselves can be considered a form of a PWM where the values indicate the filter's preference. These are stored in the pwms dictionary.\n",
-    "Note: You might want to apply further transformations here, such as taking the absolute value, using a ReLU-like function (np.maximum(0, pwm)), or normalizing the weights. The example includes a separate function for normalization.\n",
-    "visualize_pwm_from_weights(pwm_dict, num_cols=8):\n",
+    "Import Necessary Libraries:\n",
     "\n",
-    "Takes the dictionary of PWMs (NumPy arrays) and the desired number of columns for the plot.\n",
-    "Creates a grid of subplots using Matplotlib.\n",
-    "For each PWM in the dictionary:\n",
-    "Creates a Pandas DataFrame with nucleotides as columns.\n",
-    "Uses the logomaker.Logo function to generate a sequence logo from the PWM.\n",
-    "Sets the title and y-axis label.\n",
-    "Normalization (Optional but Recommended for Probabilistic Interpretation):\n",
+    "torch and torch.nn: PyTorch libraries for neural networks.\n",
+    "numpy: For numerical operations, especially array manipulation.\n",
+    "pandas: For creating DataFrames, which are used by logomaker.\n",
+    "logomaker: A library for creating sequence logos.\n",
+    "matplotlib.pyplot: For plotting.\n",
+    "calculate_pwm_from_filter_weights(conv_layer) Function:\n",
     "\n",
-    "The normalize_pwm(pwm) function demonstrates how to normalize the weights for each position using the softmax function. This transforms the weights into values that resemble probabilities (summing to 1 across the four nucleotides for each position).\n",
-    "A separate visualization function visualize_normalized_pwm_from_weights is provided to display these normalized PWMs with a y-axis ranging from 0 to 1.\n",
-    "How to Use:\n",
+    "Input: Takes a PyTorch nn.Conv1d layer (a 1D convolutional layer commonly used for sequence data) as input.\n",
+    "Extract Weights: Retrieves the learned weights from the convolutional layer's parameters as a NumPy array. The shape of these weights is typically (num_filters, in_channels, kernel_size). For DNA, in_channels is expected to be 4 (representing the one-hot encoded nucleotides A, C, G, T).\n",
+    "Input Channel Check: Verifies that the input channel dimension is indeed 4.\n",
+    "Softmax Normalization: For each filter:\n",
+    "It extracts the weight matrix for that filter (shape: (4, kernel_size)).\n",
+    "It applies the softmax function along the nucleotide dimension (axis 0). This transforms the raw weight values into probabilities between 0 and 1, where for each position in the filter (each column), the probabilities for A, C, G, and T sum up to 1. This normalization makes the filter weights resemble a standard PWM. A numerical stability trick (subtracting the maximum value) is used before exponentiation.\n",
+    "Output: Returns a dictionary where the keys are the indices of the filters, and the values are the normalized PWMs (NumPy arrays of shape (4, kernel_size)).\n",
+    "visualize_pwm_from_weights(pwm_dict, num_cols=8) Function:\n",
     "\n",
-    "Make sure you have PyTorch, NumPy, Pandas, Logomaker, and Matplotlib installed.\n",
-    "Define or load your convolutional neural network model.\n",
-    "Get the first convolutional layer from your model (e.g., first_conv_layer = model.conv1).\n",
-    "Call calculate_pwm_from_filter_weights(first_conv_layer) to get the PWMs from the weights.\n",
-    "Call visualize_pwm_from_weights() or visualize_normalized_pwm_from_weights() to visualize the resulting PWMs as sequence logos.\n",
-    "This approach provides a direct visualization of the patterns that the convolutional filters have learned based on their weight values. Remember that the interpretation of these PWMs might differ slightly from those derived from activation-maximizing sequences.\n"
+    "Input: Takes a dictionary pwm_dict (output from calculate_pwm_from_filter_weights) and the desired number of columns for the visualization grid.\n",
+    "Grid Setup: Calculates the number of rows needed to display all the PWMs in a grid.\n",
+    "Plotting Loop: Iterates through each filter index and its corresponding normalized PWM in the pwm_dict.\n",
+    "Create Subplot: Creates a subplot for each filter.\n",
+    "Convert to DataFrame: Converts the NumPy array PWM into a Pandas DataFrame, with columns labeled 'A', 'C', 'G', 'T'. This is the format expected by logomaker.\n",
+    "Generate Sequence Logo: Uses logomaker.Logo to create a sequence logo from the DataFrame and plots it on the current subplot.\n",
+    "Set Labels and Title: Sets the title of the subplot to indicate the filter index and that it's derived from normalized weights. Sets the y-axis label to \"Probability\".\n",
+    "Style X-ticks: Calls logo.style_xticks() to format the x-axis ticks (removing the problematic step argument).\n",
+    "Set Y-axis Limits: Sets the y-axis limits to 0 and 1 to represent the probability values.\n",
+    "Layout and Show: Adjusts the spacing between subplots and displays the entire figure.\n",
+    "Example Usage (if __name__ == '__main__':)\n",
+    "\n",
+    "Define Convolutional Layer: Creates a simple nn.Conv1d layer as an example. In a real scenario, you would likely have a trained model.\n",
+    "Initialize Weights: Initializes the weights of the convolutional layer using Xavier uniform initialization (for demonstration purposes). In a trained model, these weights would have been learned.\n",
+    "Calculate PWMs: Calls calculate_pwm_from_filter_weights to get the normalized PWMs from the example convolutional layer.\n",
+    "Visualize PWMs: Calls visualize_pwm_from_weights to display the generated PWMs as sequence logos.\n",
+    "In summary, this code provides a way to directly visualize what patterns the convolutional filters in a DNA sequence model have learned by:\n",
+    "\n",
+    "Extracting the filter weights.\n",
+    "Normalizing these weights using the softmax function to represent the filter's preference for each nucleotide at each position as a probability distribution.\n",
+    "Using the logomaker library to create visually interpretable sequence logos from these probability-based PWMs.\n",
+    "This method offers a complementary approach to understanding filter functionality compared to analyzing sequences that maximally activate the filters. It directly shows the inherent biases and preferences encoded in the filter's weight parameters."
    ]
   },
   {
