--- a/post/2025-03-25-unit00/basic_DNA_tutorial.ipynb
+++ b/post/2025-03-25-unit00/basic_DNA_tutorial.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: DNA score prediction with Pytorch\n",
+    "title: DO NOT USE FOR REPURPOSING - DNA score prediction with Pytorch\n",
     "author: Erin Wilson\n",
     "date: 2025-03-25\n",
     "date-modified: last-modified\n",
