--- a/post/2025-03-25-unit00/tf-binding-prediction-starter.ipynb
+++ b/post/2025-03-25-unit00/tf-binding-prediction-starter.ipynb
@@ -8,6 +8,10 @@
     "title: TF Binding prediction project\n",
     "date: 2025-04-03\n",
     "author: Sofia Salazar\n",
+    "categories:\n",
+    "    - gene46100\n",
+    "    - project\n",
+    "    - notebook\n",
     "---"
    ]
   },
