--- a/post/2025-04-15-unit01/nano-gpt/annotated-gpt_dev.qmd
+++ b/post/2025-04-15-unit01/nano-gpt/annotated-gpt_dev.qmd
@@ -488,7 +488,7 @@ else:
     device = torch.device("cpu")   # CPU fallback
 print(f"Using device: {device}")
 
-# Set random seed for reproducibility across devices
+# Set random seed for reproducibility
 torch.manual_seed(1337)
 if device.type == 'cuda':
     torch.cuda.manual_seed(1337)
